# Algoritomos-ordernacao

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: metricas_execucao.csv
docs/: ANALISE_RESULTADOS.md  README.md
src/: __init__.py  main.py
src/algorithms/: __init__.py  bubblesort.py  insertionsort.py  mergesort.py  quicksort.py  selectionsort.py  shellsort.py
src/dashboard/: __init__.py  app.py
src/dashboard/charts/: __init__.py  comparison_charts.py  complexity_charts.py  recursive_charts.py  time_charts.py
src/dashboard/components/: __init__.py  metrics.py  sidebar.py  tables.py
src/dashboard/config/: __init__.py  page_config.py
src/dashboard/content/: __init__.py  algorithm_info.py
src/dashboard/data/: __init__.py  loader.py
src/dashboard/tabs/: __init__.py  comparisons.py  complexity.py  conclusions.py  execution_time.py  logic.py  overview.py  recursion.py
src/utils/: __init__.py  array_generator.py  csv_handler.py  performance.py
tests/: __init__.py
